2001-10-02  Richard Sandiford  <rsandifo@redhat.com>

	* haifa-sched.c (max_issue): Remove last_p argument.  Only return
	non-zero if the highest-priority instruction could be scheduled.
	(choose_ready): Remove last argument from max_issue call.

2001-09-28  David S. Miller  <davem@redhat.com>

	* config/sparc/sparc.c (sparc_use_sched_lookahead): Use 4 for
	ultrasparc and 3 for other multi-issue sparcs.

2001-09-27  David S. Miller  <davem@redhat.com>

	* config/sparc/sparc.md (cycle_display): New pattern.
	* config/sparc/sparc.c (sparc_cycle_display): New.
	(TARGET_SCHED_CYCLE_DISPLAY): Set it.

2001-09-25  David S. Miller  <davem@redhat.com>

	Convert all of Sparc scheduling to DFA
	* config/sparc/sparc.md: Kill all define_function_unit
	directives and replace with DFA equivalent.
	* config/sparc/sparc.c (ultrasparc_adjust_cost,
	mark_ultrasparc_pipeline_state, ultra_cmove_results_ready_p,
	ultra_fpmode_conflict_exists, ultra_find_type,
	ultra_build_types_avail, ultra_flush_pipeline,
	ultra_rescan_pipeline_state, ultrasparc_sched_reorder,
	ultrasparc_variable_issue, ultrasparc_sched_init,
	sparc_variable_issue, sparc_sched_reorder, ultra_code_from_mask,
	ultra_schedule_insn, ultra_code_names, ultra_pipe_hist,
	ultra_cur_hist, ultra_cycles_elapsed): Kill.
	(sparc_use_dfa_pipeline_interface, sparc_use_sched_lookahead,
	ultrasparc_store_bypass_p): New.
	* config/sparc/sparc-protos.h (ultrasparc_store_bypass_p):
	Declare.

2001-09-24  David S. Miller  <davem@redhat.com>

	* haifa-sched.c (ready_remove): Fix thinko, we want to copy around
	ready->vec[foo] not ready[foo].

2001-09-07  Vladimir Makarov  <vmakarov@redhat.com>

	* doc/md.texi: Correct examples for define_insn_reservations
	`mult' and `div'.

2001-09-07  Vladimir Makarov  <vmakarov@redhat.com>

	* genautomata.c (create_automata): Print message about creation of
	each automaton.
	(generate): Remove printing meease about creation of
	automata.

2001-09-05  David S. Miller  <davem@redhat.com>
